force-app/main/default/objects/Milestone__c/fields/Warship__c.field-meta.xml
<CustomField>
    <fullName>Warship__c</fullName>
    <label>Warship</label>
    <referenceTo>Warship__c</referenceTo>
    <relationshipLabel>Milestones</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>