force-app/main/default/objects/Milestone__c/validationRules/criacao_Milestone.validationRule-meta.xml
<ValidationRule>
    <fullName>criacao_Milestone</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Due_Date__c  &lt;  TODAY(), ISNEW(),  $Permission.Disable_Validation_Rule )</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>A milestone with a date lower than the current date cannot be created.</errorMessage>
</ValidationRule>