force-app/main/default/objects/Milestone__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Warship__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>